# nvd-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: cwe.py  db.py  files.py  init.py  jsondl.py  kev.py  nvd.py  severity.py  summarize.py  update.py
tests/: test_summarize.py
